# LZ77-Algorithm

./: CMakeLists.txt  README.md
build-lzalgorithm-Desktop-Debug/: Makefile  lzalgorithm  moc_mainwindow.cpp  ui_mainwindow.h
src/: algorithmLZ77.cpp  algorithmLZ77.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/algorithm/: algorithm.cpp  algorithm.h  main.cpp
src/ui/: mainscreen.cpp  mainscreen.h  mainscreen.ui
